// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blue component renders Blue snapshot 1`] = `
<div
  style={
    Object {
      "backgroundColor": "blue",
      "height": "100vh",
      "width": "100vw",
    }
  }
/>
`;

exports[`Red component renders Red snapshot 1`] = `
<div
  style={
    Object {
      "backgroundColor": "red",
      "height": "100vh",
      "width": "100vw",
    }
  }
/>
`;
